src/pages/thread/Comment/Comment.css
.comment {
  display: flex;
  flex-direction: row;
  gap: 7px;
}

.comment-link {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.comment-profile {
  width: 30px;
  height: 30px;
}

.comment-master-content {
  flex-grow: 1;
}

.comment-line {
  width: 2px;
  margin: 0;
  flex-grow: 1;
  border-width: 0;
  min-height: 20px;
  background-color: lightgray;
}

.comment-link:hover .comment-line {
  background-color: orange;
}

.comment-content {
  display: flex;
  flex-direction: column;
  gap: 4px;
  margin-top: 12px;
}

.comment-author-date {
  display: flex;
  flex-direction: row;
  margin-top: 3px;
  gap: 15px;
}

.comment-author {
  margin: 0px;
  color: var(--honolulu);
}

.comment-date {
  margin: 0px;
}

.comment-text {
  margin: 0px;
}

.comment-more-replies {
  color: var(--usafa);
  margin-top: 0px;
  margin-bottom: 17px;
}

.comment-vote-reply {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.comment-reply-link {
  color: var(--usafa);
  margin-left: 15px;
}

